<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/green_dark"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp" >

        <RelativeLayout
            android:id="@+id/list_item_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_alignParentTop="true"
                android:text="@string/vijay"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvREmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_below="@+id/tvRName"
                android:text="@string/shuklavijay249_gmail_com"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvRGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_below="@+id/tvREmail"
                android:layout_alignParentLeft="true"
                android:text="@string/male"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Switch
                android:id="@+id/swRStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_below="@+id/tvREmail"
                android:layout_alignParentRight="true"
                android:text="@string/status"
                android:checked="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
</layout>