<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="myViewModel"
            type="com.vijay.testapp.UserViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <EditText
                android:id="@+id/etName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/user_s_name"
                android:inputType="textPersonName"
                android:text="@={myViewModel.inputName}"
                android:textSize="14sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@+id/etName"
                android:ems="10"
                android:textSize="14sp"
                android:hint="@string/gender"
                android:inputType="textPersonName"
                android:text="@={myViewModel.inputGender}"
                android:textAllCaps="true" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etName"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:textSize="14sp"
                android:hint="@string/user_s_email"
                android:inputType="textPersonName"
                android:text="@={myViewModel.inputEmail}"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etName"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@+id/etEmail"
                android:hint="@string/active_inactive"
                android:textSize="14sp"
                android:inputType="textPersonName"
                android:text="@={myViewModel.inputStatus}"
                android:textAllCaps="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etEmail"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:onClick="@{()->myViewModel.saveOrUpdate()}"
                    android:text="@={myViewModel.saveOrUpdateButtonText}"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="0.8"
                    android:onClick="@{()->myViewModel.clearAllOrDelete()}"
                    android:text="@={myViewModel.clearAllOrDeleteButtonText}"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/subscriber_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relInput"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp" />

    </RelativeLayout>
</layout>